Fix file icon color on mobile

--- a/github-dark.css
+++ b/github-dark.css
@@ -2849,7 +2849,8 @@
   .notification-indicator:hover, .btn.btn-outline,
   .full-commit .btn-outline:not(:disabled):hover, .markdown-body a strong,
   .markdown-format a strong, .notifications.list-group a:hover,
-  a.octolinker-link, .discussion-sidebar-toggle:hover, .commit-id:hover {
+  a.octolinker-link, .discussion-sidebar-toggle:hover, .commit-id:hover,
+  body[class="page-responsive"] .files-list .octicon {
     color: /*[[base-color]]*/ #4f8cc9 !important;
   }
   body.api li a code {
